# data-hub

./: .gitignore  README.md  docker-compose.yml  download_dukascopy.py  download_xauusd_dukascopy.py  env.example  pyproject.toml  resample_h4_from_h1.py  validate_data.py
data_hub/: README.md  __init__.py  cli.py  cli_clean.py  cli_dukascopy.py  cli_ticks.py  config.py
data_hub/database/: __init__.py  connection.py  models.py
data_hub/ingestion/: __init__.py  batch_processor.py  csv_parser.py  dukascopy_fetcher.py  exness_tick_importer.py  tick_batch_processor.py  validator.py
data_hub/models/: __init__.py  bar_data.py  symbol.py  tick_data.py  timeframe.py
data_hub/normalization/: __init__.py  broker.py  mapper.py  symbol.py  timeframe.py
